src/test/ui/issue-25826.stderr
error[E0395]: raw pointers cannot be compared in constants
  --> $DIR/issue-25826.rs:13:21
   |
13 |     const A: bool = id::<u8> as *const () < id::<u16> as *const ();
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ comparing raw pointers in static

error: aborting due to previous error

